# patto

./: .gitignore  .vscodeignore  Cargo.toml  README.md  build.rs  dist-workspace.toml  language-configuration.json  package.json  pnpm-lock.yaml  todo.md  todo.pn  todo.tb  tsconfig.json  webpack.config.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
after/ftplugin/: patto.vim  tabton.vim
assets/: patto-html.css
autoload/: patto.vim  patto_preview_toggle.vim  tabton.vim
client/: package.json  pnpm-lock.yaml  tsconfig.json
client/src/: binaryManager.ts  extension.ts
docs/: advanced-usage.md
ftdetect/: patto.vim  tabton.vim
lsp/: patto_lsp.lua  patto_notification.lua  patto_preview.lua  patto_preview_tui.lua
lua/: patto.lua  patto_img_preview.lua  patto_journal.lua  patto_journal_import.lua  patto_notification.lua  patto_preview.lua  patto_preview_toggle.lua  patto_preview_tui.lua
lua/patto/: current_task.lua  foldtext.lua  tasks.lua
lua/patto_tasks/: trouble.lua
lua/trouble/sources/: patto_tasks.lua  patto_tasks_review.lua
patto-chafa-bridge/: Cargo.toml
patto-chafa-bridge/src/: lib.rs
patto-flutter/: .gitignore  README.md  analysis_options.yaml  build.yaml  flutter_rust_bridge.yaml  pubspec.yaml
patto-flutter/lib/: main.dart
patto-flutter/lib/src/: app.dart
patto-flutter/lib/src/core/router/: app_router.dart
patto-flutter/lib/src/core/theme/: app_theme.dart
patto-flutter/lib/src/core/utils/: secure_storage.dart
patto-flutter/lib/src/features/git/domain/: git_config.dart
patto-flutter/lib/src/features/git/presentation/: git_provider.dart  settings_screen.dart
patto-flutter/lib/src/features/notes/domain/: note_info.dart
patto-flutter/lib/src/features/notes/presentation/: notes_provider.dart  page_list_screen.dart  page_view_screen.dart
patto-flutter/lib/src/features/notes/presentation/widgets/: ast_renderer.dart  note_list_item.dart  sort_selector.dart
patto-flutter/lib/src/features/settings/presentation/: settings_provider.dart
patto-flutter/rust/: Cargo.toml
patto-flutter/rust/src/: lib.rs
patto-flutter/rust/src/api/: git_api.rs  mod.rs  parser_api.rs
patto-preview-next/: package-lock.json  package.json
patto-preview-next/src/app/: globals.css  layout.js  page.js  page.module.css
patto-preview-next/src/components/: AstRenderer.jsx  BackLinks.jsx  BackLinks.module.css  LazyCode.jsx  Preview.jsx  Preview.module.css  Sidebar.jsx  Sidebar.module.css  SpeakerDeck.jsx  TaskPanel.jsx  TaskPanel.module.css  Tweet.jsx  TwoHopLinks.jsx  TwoHopLinks.module.css
patto-preview-next/src/components/transforms/: codeTransform.jsx  formTransform.jsx  imageTransform.jsx  index.js  linkTransform.jsx  pattoTransform.jsx  speakerdeckTransform.jsx  twitterTransform.jsx
patto-preview-next/src/lib/: messageTypes.js  router.js  store.js  useHtmlTransformer.js  usePattoStore.js  websocket.js
patto-preview-ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
patto-preview-ui/src/: App.tsx  index.css  main.tsx
patto-preview-ui/src/components/: CodeBlock.tsx  EmbedBlock.tsx  ImageLightbox.tsx  PdfBlock.tsx  PrintRenderer.tsx  SlideShareBlock.tsx  SpeakerDeckBlock.tsx  TaskIcon.tsx  TwitterBlock.tsx  VirtualRenderer.tsx
plugin/: patto.vim  tabton.vim
samples/: indentation_sample.ms  sample.ms  sample2.ms
settings/: vimlsp.vim
skills/patto-web-importer/: SKILL.md
skills/patto-web-importer/references/: patto-syntax.md
src/: diagnostic_translator.rs  lib.rs  line_tracker.rs  main.rs  markshift.pest  parser.rs  patto.pest  renderer.rs  repository.rs  semantic_token.rs  syntax_highlight.rs  tabton.pest  task.rs  tui_renderer.rs  utils.rs
src/gcal/: auth.rs  config.rs  event_mapper.rs  mod.rs  state.rs  sync.rs
src/importer/: converter.rs  mod.rs  options.rs  report.rs
src/lsp/: backend.rs  mod.rs  paper.rs  task_edits.rs
src/markdown/: flavor.rs  mod.rs  options.rs
static/: download_3rdparty_libs.sh  index.html
static/js/: app.js
syntax/: patto.vim  tabton.vim
tests/: common_tests.rs  infrastructure.rs  lsp_completion.rs  lsp_document_lifecycle.rs  lsp_execute_command.rs  lsp_folding_range.rs  lsp_goto_definition.rs  lsp_references.rs  lsp_rename_anchors.rs  lsp_rename_basic.rs  lsp_rename_current_file.rs  lsp_semantic_tokens.rs  lsp_semantic_tokens_delta.rs  lsp_task_completion.rs  lsp_task_time_tracking.rs  markdown_export.rs  markdown_import.rs  quote_indentation.rs
tests/common/: assertions.rs  client.rs  in_process_client.rs  lsp_codec.rs  mod.rs  workspace.rs
tree-sitter-patto/: .gitignore  Cargo.toml  build.rs  grammar.js  package.json  tree-sitter.json
tree-sitter-patto/queries/: folds.scm  highlights.scm  injections.scm  locals.scm
tree-sitter-patto/src/: grammar.json  lib.rs  node-types.json  parser.c  scanner.c
tree-sitter-patto/test/corpus/: basic.txt  blocks.txt  complex.txt  edge_cases.txt  embeds.txt  inline.txt  links.txt  properties.txt
vhs/: demo.tape  record_vhs.sh  record_vhs_task_aggregation.sh
wix/: main.wxs
