[package]
name = "patto"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "🐙 Yet another plain text format for quick note taking and task management"
repository = "https://github.com/ompugao/patto"
homepage = "https://github.com/ompugao/patto"
authors = ["Shohei Fujii <fujii.shohei@gmail.com>"]

[package.metadata.wix]
upgrade-guid = "08E8D49C-D108-4CCE-9F20-64D308C6BFD9"
path-guid = "638CD8B9-6D88-4219-A7A9-7B54609ED590"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
dashmap = "6.1.0"
fuzzy-matcher = "0.3.7"
html-escape = "0.2.13"
log = "0.4.22"
pest = "2.7.11"
pest_derive = "2.7.11"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
ropey = "1.6.1"
serde = "1.0.215"
serde_json = "1.0.128"
simplelog = "0.12.2"
thiserror = "1.0.63"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["runtime-tokio", "proposed"]}
url = "2.5.2"
urlencoding = "2.1.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
