[package]
name = "patto"
version = "0.1.21"
edition = "2021"
license = "MIT"
description = "🐙 Yet another plain text format for quick note taking and task management"
repository = "https://github.com/ompugao/patto"
homepage = "https://github.com/ompugao/patto"
authors = ["Shohei Fujii <fujii.shohei@gmail.com>"]

[package.metadata.wix]
upgrade-guid = "08E8D49C-D108-4CCE-9F20-64D308C6BFD9"
path-guid = "638CD8B9-6D88-4219-A7A9-7B54609ED590"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
dashmap = "6.1.0"
futures = "0.3.30"
fuzzy-matcher = "0.3.7"
gdsl = "0.2.1"
html-escape = "0.2.13"
log = "0.4.22"
notify = "6.1.1"
pest = "2.7.11"
pest_derive = "2.7.11"
regex = "1.11.1"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
ropey = "1.6.1"
rust-embed = { version = "8.0", features = ["include-exclude"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.128"
simplelog = "0.12.2"
str_indices = "0.4.4"
thiserror = "1.0.63"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["runtime-tokio", "proposed"]}
url = "2.5.2"
urlencoding = "2.1.3"
sha2 = "0.10.8"
anyhow = "1.0.88"
rand = "0.8.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
