[package]
name = "patto"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "🪽 Yet another plain text format for quick note taking and task management"
repository = "https://github.com/ompugao/patto"
homepage = "https://github.com/ompugao/patto"
authors = ["Shohei Fujii <fujii.shohei@gmail.com>"]

[package.metadata.wix]
upgrade-guid = "08E8D49C-D108-4CCE-9F20-64D308C6BFD9"
path-guid = "638CD8B9-6D88-4219-A7A9-7B54609ED590"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["zotero"]
zotero = ["dep:zotero-rs"]

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
dashmap = "6.1.0"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
gdsl = "0.2.1"
glob = "0.3"
html-escape = "0.2.13"
log = "0.4.29"
notify = "8.2.0"
pest = "2.8.5"
pest_derive = "2.8.5"
pulldown-cmark = "0.13"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
ropey = "1.6.1"
rust-embed = { version = "8.11", features = ["include-exclude"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
simplelog = "0.12.2"
str_indices = "0.4.4"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tower-lsp = { version = "0.20.0", features = ["runtime-tokio", "proposed"]}
url = "2.5.8"
urlencoding = "2.1.3"
sha2 = "0.10.9"
anyhow = "1.0.100"
rand = "0.9.2"
zotero-rs = { version = "0.2.5", optional = true }

[dev-dependencies]
tempfile = "3.24"
tokio-util = { version = "0.7", features = ["codec"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
