[package]
name = "patto_flutter_rust"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Patto Flutter app"
authors = ["Patto Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "patto_flutter_rust"

[dependencies]
# Flutter Rust Bridge
flutter_rust_bridge = "2.0"

# Import the main patto crate for parser
patto = { path = "../.." }

# Git operations
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2", "https"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime for git operations
tokio = { version = "1", features = ["rt", "sync"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
